# kaonic-gateway

kaonic-audio-ptt/src/: main.rs
kaonic-dashboard/src/: frames.rs  lib.rs  pages.rs
kaonic-gateway/: Cargo.toml  kaonic-plugin.toml
kaonic-gateway/src/: app.rs
kaonic-gateway/src/components/: navbar.rs
kaonic-gateway/src/http/: handlers.rs  mod.rs
kaonic-gateway/src/pages/: mavlink.rs  mod.rs
kaonic-reticulum/src/: lib.rs
kaonic-update/: Cargo.toml
kaonic-update/src/: main.rs
