[package]
name = "kaonic-gateway"
version = "0.2.4"
edition = "2021"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "kaonic-gateway"
path = "src/main.rs"

[dependencies]
leptos        = { version = "0.8", default-features = false, features = ["ssr"] }
leptos_meta   = { version = "0.8", default-features = false, features = ["ssr"] }
leptos_router = { version = "0.8", default-features = false, features = ["ssr"] }
radio-common  = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
log           = "0.4"
thiserror     = "1"

kaonic-ctrl      = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
kaonic-frame     = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
kaonic-reticulum = { path = "../kaonic-reticulum" }
reticulum        = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", branch = "fix/add-timer-configs" }
kaonic-vpn       = { path = "../kaonic-vpn", features = ["run"] }
axum             = { version = "0.8", features = ["ws"] }
axum-server      = { version = "0.7", features = ["tls-rustls"] }
leptos_axum      = { version = "0.8" }
tokio            = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "fs", "process"] }
tokio-util       = "0.7"
socket2          = { version = "0.5", features = ["all"] }
if-addrs         = "0.13"
tower-http       = { version = "0.5", features = ["fs"] }
env_logger       = "0.11"
clap             = { version = "4", features = ["derive"] }
rand             = "0.8"
rusqlite         = { version = "0.31", features = ["bundled"] }
cidr             = { version = "0.2", features = ["serde"] }
crc32fast        = "1"
p256            = { version = "0.13", features = ["ecdsa", "pkcs8"] }
reqwest          = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
rcgen            = { version = "0.13", features = ["crypto", "pem", "ring"] }
rustls           = { version = "0.23", features = ["ring"] }
rust-embed       = "8"
mime_guess       = "2"
libc             = "0.2"
qrcodegen        = "1.8"
sha2             = "0.10"
